--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "https://github.com/Akash1012/logiq",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://anuupadhyay.github.io/my-app",
+  "homepage": "https://github.com/Akash1012/logiq",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
